# blog_project

./: Dockerfile  README.md  add_categories.py  collectstatic.sh  db.sqlite3  docker-compose.yml  generate_test_data.py  nginx.conf  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0002_category_post_image_post_likes_post_summary_and_more.py  0003_remove_post_image_remove_userprofile_profile_pic_and_more.py
blog/templates/blog/: base.html  category.html  home.html  login.html  mypost.html  newpost.html  post_confirm_delete.html  post_detail.html  post_form.html  profile.html  search_results.html  signup.html  update_profile.html  user_posts.html
blog_app/: settings.py  urls.py
snippet/: login.txt  signup
