[tool.poetry]
name = "blog-project"
version = "0.1.0"
description = "Django blog project"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "5.1.6"
pillow = "10.2.0"
django-crispy-forms = "2.1"
crispy-bootstrap4 = "2023.1"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 